syntax = "proto3";

package northstar.message;

message CustomerKafkaMessage {
    oneof MessageType {       
        NewUserMessage NewUserMessage = 1;
    }
}

message NewUserMessage {
    string Id = 1;
    string FirstName = 2;   
    string LastName = 3;
    string Email = 4;
    string Street = 5;
    string Zip = 6;
    string City = 7;    
}